airs\feat(cross): #3581.2 footer redesign
- Remoe contact form from the footer


Former-commit-id: b01a7ea43a19711f00ba3c3d2e7e925865143ba4

--- a/airs/content/pages/systems/cloud-infrastructure/index.adoc
+++ b/airs/content/pages/systems/cloud-infrastructure/index.adoc
@@ -1,4 +1,4 @@
-:slug: systems/cloud/
+:slug: systems/cloud-infrastructure/
 :category: systems
 :description: Cloud infrastructure is among the systems that we at Fluid Attacks help you evaluate to detect security vulnerabilities that you can subsequently remediate.
 :keywords: Fluid Attacks, Cloud, Infrastructure, Continuous Hacking, Security, System, Ethical Hacking, Pentesting
