airs\feat(doc): #3716 blog new post cybersecurity
- I have uploaded the second part of state of cybersecurity-2020-21


Former-commit-id: f507b005dd39c3590c35aa1fb5963c290a11bdee

--- a/airs/content/blog/cybersecurity-2020-21-i/index.adoc
+++ b/airs/content/blog/cybersecurity-2020-21-i/index.adoc
@@ -2,11 +2,11 @@
 :date: 2020-11-19
 :subtitle: Current trends of cybercriminals
 :category: opinions
-:tags: security, cybersecurity, hacking, social, company, business
+:tags: security, cybersecurity, trends, hacking, social, company
 :image: cover.png
 :alt: Photo by Jr Korpa on Unsplash
-:description: In this first part of a general post on the state of cybersecurity 2020-21, we want to share with you some highlights of the current trends of cybercriminals.
-:keywords: Security, Cybersecurity, Hacking, Attacks, Criminals, Social, Company, Ethical Hacking, Pentesting
+:description: In this first part of the state of cybersecurity 2020-21, we want to share with you some highlights of the current trends of cybercriminals.
+:keywords: Security, Cybersecurity, Trends, Hacking, Attacks, Criminals, Company, Ethical Hacking, Pentesting
 :author: Felipe Ruiz
 :writer: fruiz
 :name: Felipe Ruiz
