skims\feat(back): #3678.5 stable predecesors
- Add a function to compute the predecesors in a stable fashion
- Add a path traversal minimalistic test in order to test concepts


Former-commit-id: 3fe7998fce8b58beed430db1f9da953bf1cf8264

--- a/skims/static/translations/findings/F063_PATH_TRAVERSAL.yaml
+++ b/skims/static/translations/findings/F063_PATH_TRAVERSAL.yaml
@@ -1,4 +1,4 @@
-src.lib_path.f063_path_traversal.java_like.description:
+src.lib_path.f063_path_traversal.description:
   en: ... in {path}
   es: ... en {path}
 utils.model.finding.enum.F063_PATH_TRAVERSAL.description:
